# MVFA

./: .gitignore  README.md  bibliography.py  clean_data.py  config.py  data_sources.py  download_data.py  main.py  output.py  pyproject.toml  test_br.py
data/processed/: panel_clean.csv
data/raw/: data_quality.csv  panel.csv  panel_template.csv  quarterly_panel.csv  source_manifest.json
models/: __init__.py  metrics.py  monte_carlo.py  rstar.py  rstar.py.patch  rstar.py.save  var_model.py
output/: paper.html
output/tables/: adf_diagnostics.csv  adf_diagnostics.md  argentina_fan_chart.csv  argentina_scenarios.csv  australia_fan_chart.csv  australia_scenarios.csv  bibliografia.csv  bibliografia.json  bibliografia.md  bibliografia_metricas.json  brazil_fan_chart.csv  brazil_scenarios.csv  canada_fan_chart.csv  canada_scenarios.csv  china_fan_chart.csv  china_scenarios.csv  classification_sensitivity_country_2024.csv  classification_sensitivity_country_2024.md  classification_sensitivity_grid_2024.csv  classification_sensitivity_grid_2024.md  classification_sensitivity_long_2024.csv  country_notes_2024.csv  country_notes_2024.md  diagnostico_2024.csv  diagnostico_2024.md  euro_area_fan_chart.csv  euro_area_scenarios.csv  global_aggregate_fan_chart.csv  global_aggregate_scenarios.csv  greece_fan_chart.csv  greece_scenarios.csv  india_fan_chart.csv  india_scenarios.csv  indonesia_fan_chart.csv  indonesia_scenarios.csv  ireland_fan_chart.csv  ireland_scenarios.csv  italy_fan_chart.csv  italy_scenarios.csv  (+31 more)
tests/: test_bibliography.py  test_metrics.py  test_var_model.py
(+42 files in other folders)
